# zeroclaw

clients/desktop/: .gitignore  README.md  diff.txt  index.html  package-lock.json  package.json  tsconfig.json
clients/desktop/src/: App.tsx  index.css  types.ts
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/src/: lib.rs  main.rs
clients/desktop/src/components/: BlockView.tsx  ChatComposer.tsx  ContextMenu.tsx  SessionsPanel.tsx  TitleBar.tsx  WorkspacePanel.tsx
clients/desktop/src/hooks/: useDesktopBridge.ts
clients/desktop/src/store/: chatStore.ts
docs/: android-setup.md
scripts/android/: termux_source_build_check.sh
scripts/ci/tests/: test_ci_scripts.py
src/channels/: mod.rs  tauri.rs
src/config/: schema.rs
src/onboard/: wizard.rs
