[package]
name = "zeroclaw-desktop"
version = "0.1.0"
description = "ZeroClaw desktop client"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
futures-util = "0.3"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2.4.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"


[lib]
name = "zeroclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
